Initial sub-base templates commit

--- a/template/base.html
+++ b/template/base.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="container-fluid">
-      {% block content %}{% endblock %}
+      {% block main %}{% endblock %}
 
       <hr>
 
