--- a/template/base.html
+++ b/template/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ title }} · OpenDuty</title>
+    <title>{% block title %}Welcome{% endblock %} · OpenDuty</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
