Added heading to base templates

--- a/templates/base_content.html
+++ b/templates/base_content.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block main %}
+  <h2>{% block title %}{% endblock %}</h2>
   {% block content %}{% endblock %}
 {% endblock %}
