--- a/templates/base_sidebar.html
+++ b/templates/base_sidebar.html
@@ -28,6 +28,7 @@
       </div><!--/.well -->
     </div><!--/span-->
     <div class="span9">
+      <h2>{% block title %}{% endblock %}</h2>
       {% block content %}{% endblock %}
     </div><!--/span-->
   </div><!--/row-->
