--- a/templates/member_list.html
+++ b/templates/member_list.html
@@ -6,20 +6,24 @@
 {% endblock %}
 
 {% block content %}
-  <table>
+  <table class="table table-striped table-bordered">
     <thead>
       <tr>
-        {% for heading in ['Name', 'Class', 'Home Phone', 'Mobile Phone', 'Email'] %}
-          <th>{{ heading }}</th>
-        {% endfor %}
+        <th>Name</th>
+        <th>Class</th>
+        <th>Home Phone</th>
+        <th>Mobile Phone</th>
+        <th>Email</th>
       </tr>
     </thead>
     <tbody>
       {% for member in object_list %}
         <tr>
-          {% for element in [{{ member.name }}, {{ member.class_name }}, {{ member.home_phone }}, {{ member.mobile_phone }}, {{ member.email }}] %}
-            <td>{{ element }}</td>
-          {% endfor %}
+          <td>{{ member.name }}</td>
+          <td>{{ member.class_name }}</td>
+          <td>{{ member.home_phone }}</td>
+          <td>{{ member.mobile_phone }}</td>
+          <td>{{ member.email }}</td>
         </tr>
       {% endfor %}
     </tbody>
