--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,7 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li{% if active == "dashboard" %} class="active"{% endif %}><a href="/dashboard/">Dashboard</a></li>
+              <li{% if active == "member" %} class="active"{% endif %}><a href="/member/">Members</a></li>
             </ul>
             <p class="navbar-text pull-right">Logged in as <a href="/account/">{{ user.member.name }}</a></p>
           </div><!--/.nav-collapse -->
