--- a/templates/member_list.html
+++ b/templates/member_list.html
@@ -1,5 +1,7 @@
 {% extends "base_sidebar.html" %}
 
+{% block member_active %} class="active"{% endblock %}
+
 {% block title %}Members{% endblock %}
 
 {% block sidebar %}
