Changed Members views to content-only

--- a/templates/member_list.html
+++ b/templates/member_list.html
@@ -1,11 +1,6 @@
-{% extends "base_sidebar.html" %}
-
-{% block member_active %} class="active"{% endblock %}
+{% extends "member.html" %}
 
 {% block title %}Members{% endblock %}
-
-{% block sidebar %}
-{% endblock %}
 
 {% block content %}
   <table class="table table-striped table-bordered">
