Added date/time to footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
       <hr>
 
       <footer>
-        <p>Powered by <a href="http://openduty.com/">OpenDuty</a></p>
+        <p>Powered by <a href="http://openduty.com/">OpenDuty</a><span style="float: right;">Generated on {% now "DATETIME_FORMAT" %}</span></p>
       </footer>
 
     </div><!--/.fluid-container-->
