Added Login view

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
               <li{% block member_active %}{% endblock %}><a href="/member/">Members</a></li>
               <li{% block event_active %}{% endblock %}><a href="/event/">Events</a></li>
             </ul>
-            <p class="navbar-text pull-right">Logged in as <a href="/account/">{{ user.member.name }}</a></p>
+            <p class="navbar-text pull-right">Logged in as <a href="/accounts/">{{ user.member.name }}</a></p>
           </div><!--/.nav-collapse -->
         </div>
       </div>
