--- a/templates/base.html
+++ b/templates/base.html
@@ -42,12 +42,22 @@
           </a>
           <a class="brand" href="/">OpenDuty</a>
           <div class="nav-collapse">
-            <ul class="nav">
-              <li{% block dashboard_active %}{% endblock %}><a href="/dashboard/">Dashboard</a></li>
-              <li{% block member_active %}{% endblock %}><a href="/member/">Members</a></li>
-              <li{% block event_active %}{% endblock %}><a href="/event/">Events</a></li>
-            </ul>
-            <p class="navbar-text pull-right">Logged in as <a href="/accounts/">{{ user.member.name }}</a></p>
+            {% if user.is_authenticated %}
+              <ul class="nav">
+                <li{% block dashboard_active %}{% endblock %}><a href="/dashboard/">Dashboard</a></li>
+                <li{% block member_active %}{% endblock %}><a href="/member/">Members</a></li>
+                <li{% block event_active %}{% endblock %}><a href="/event/">Events</a></li>
+              </ul>
+              <ul class="nav pull-right">
+                <li class="divider-vertical"></li>
+                <li><a href="/accounts/logout/">Logout</a></li>
+              </ul>
+              <p class="navbar-text pull-right">Logged in as <a href="/accounts/">{{ user.member.name }}</a></p>
+            {% else %}
+              <ul class="nav pull-right">
+                <li><a href="/accounts/login/">Login</a></li>
+              </ul>
+            {% endif %}
           </div><!--/.nav-collapse -->
         </div>
       </div>
