--- a/templates/base_sidebar.html
+++ b/templates/base_sidebar.html
@@ -28,7 +28,9 @@
       </div><!--/.well -->
     </div><!--/span-->
     <div class="span9">
-      <h2>{% block title %}{% endblock %}</h2>
+      <div class="page-header">
+        <h1>{% block title %}{% endblock %}</h1>
+      </div>
       {% block content %}{% endblock %}
     </div><!--/span-->
   </div><!--/row-->
