Changed submit tag to maintain consistency

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,7 +14,7 @@
     {{ form.username }}
     {{ form.password.label_tag }}
     {{ form.password }}
-    <p><button type="submit" class="btn btn-primary">Login</button></p>
+    <p><input type="submit" class="btn btn-primary" value="Login" /></p>
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
 {% endblock %}
