--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,16 +4,9 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-  {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
-
   <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
     {% csrf_token %}
-    {{ form.username.label_tag }}
-    {{ form.username }}
-    {{ form.password.label_tag }}
-    {{ form.password }}
+    {% include "form.html" %}
     <p><input type="submit" class="btn btn-primary" value="Login" /></p>
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
