--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,6 +6,11 @@
 {% block content %}
   <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
     {% csrf_token %}
+    {% if form.errors %}
+      <div class="control-group error">
+        <p>Your username and password didn't match. Please try again.</p>
+      </div>
+    {% endif %}
     {% include "form.html" %}
     <p><input type="submit" class="btn btn-primary" value="Login" /></p>
     <input type="hidden" name="next" value="{{ next }}" />
