--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container-fluid">
+        <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -67,14 +67,14 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
       <div class="main">{% block main %}{% endblock %}</div>
 
       <footer>
         <p>Powered by <a href="http://openduty.com/">OpenDuty</a><span style="float: right;">Generated on {% now "DATETIME_FORMAT" %}</span></p>
       </footer>
 
-    </div><!--/.fluid-container-->
+    </div><!--/.container-->
 
     <!-- Le javascript
     ================================================== -->
