--- a/templates/base_content.html
+++ b/templates/base_content.html
@@ -2,7 +2,7 @@
 
 {% block main %}
   <div class="page-header">
-    <h1>{% block title %}{% endblock %}</h1>
+    <h1>{% block title %}{% endblock %} <small>{% block subtitle %}{% endblock %}</small></h1>
   </div>
   {% block content %}{% endblock %}
 {% endblock %}
