--- a/templates/base_sidebar.html
+++ b/templates/base_sidebar.html
@@ -29,7 +29,7 @@
     </div><!--/span-->
     <div class="span9">
       <div class="page-header">
-        <h1>{% block title %}{% endblock %}</h1>
+        <h1>{% block title %}{% endblock %} <small>{% block subtitle %}{% endblock %}</small></h1>
       </div>
       {% block content %}{% endblock %}
     </div><!--/span-->
