Added account profile view and template

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
                 <li class="divider-vertical"></li>
                 <li><a href="/accounts/logout/">Logout</a></li>
               </ul>
-              <p class="navbar-text pull-right">Logged in as <a href="/accounts/">{{ user.member.name }}</a></p>
+              <p class="navbar-text pull-right">Logged in as <a href="/accounts/profile/">{{ user.member.name }}</a></p>
             {% else %}
               <ul class="nav pull-right">
                 <li><a href="/accounts/login/">Login</a></li>
