--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -6,6 +6,9 @@
   <form method="post" class="form-horizontal">
     {% csrf_token %}
     {% include "form.html" %}
-    <div class="form-actions"><input type="submit" class="btn btn-primary" value="Change Password" /></div>
+    <div class="form-actions">
+      <input type="submit" class="btn btn-primary" value="Change Password" />
+      <a href="/accounts/profile/" class="btn">Cancel</a>
+    </div>
   </form>
 {% endblock %}
