--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,4 +1,5 @@
 {% extends "base_content.html" %}
+{% load url from future %}
 
 {% block title %}Reset Password{% endblock %}
 
@@ -6,6 +7,9 @@
   <form method="post" class="form-horizontal">
     {% csrf_token %}
     {% include "form.html" %}
-    <div class="form-actions"><input type="submit" class="btn btn-primary" value="Reset Password" /></div>
+    <div class="form-actions">
+      <input type="submit" class="btn btn-primary" value="Reset Password" />
+      <a href="{% url 'django.contrib.auth.views.login' %}" class="btn">Cancel</a>
+    </div>
   </form>
 {% endblock %}
