Added MemberDetailView and corresponding template/link

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
       .sidebar-nav {
         padding: 9px 0;
       }
+      .table-left th {
+        width: 20%;
+      }
     </style>
     <link href="http://static.openduty.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
