--- a/templates/member/detail.html
+++ b/templates/member/detail.html
@@ -1,7 +1,7 @@
 {% extends "member/member.html" %}
 
 {% block title %}{{ member.name }}{% endblock %}
-{% block subtitle %}Member Detail{% endblock %}
+{% block subtitle %}Member Details{% endblock %}
 
 {% block content %}
   <table class="table table-striped table-bordered table-left">
