Converted all links to use reverse lookup

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load url from future %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -52,17 +54,17 @@
             {% if user.is_authenticated %}
               <ul class="nav">
                 <li{% block dashboard_active %}{% endblock %}><a href="/dashboard/">Dashboard</a></li>
-                <li{% block member_active %}{% endblock %}><a href="/member/">Members</a></li>
-                <li{% block event_active %}{% endblock %}><a href="/event/">Events</a></li>
+                <li{% block member_active %}{% endblock %}><a href="{% url 'member' %}">Members</a></li>
+                <li{% block event_active %}{% endblock %}><a href="{% url 'event' %}">Events</a></li>
               </ul>
               <ul class="nav pull-right">
                 <li class="divider-vertical"></li>
-                <li><a href="/accounts/logout/">Logout</a></li>
+                <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
               </ul>
-              <p class="navbar-text pull-right">Logged in as <a href="/accounts/profile/">{{ user.member.name }}</a></p>
+              <p class="navbar-text pull-right">Logged in as <a href="{% url 'accounts_profile' %}">{{ user.member.name }}</a></p>
             {% else %}
               <ul class="nav pull-right">
-                <li><a href="/accounts/login/">Login</a></li>
+                <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
               </ul>
             {% endif %}
           </div><!--/.nav-collapse -->
