--- a/templates/event/detail.html
+++ b/templates/event/detail.html
@@ -1,4 +1,5 @@
 {% extends "event/event.html" %}
+{% load url from future %}
 
 {% block title %}{{ event.name }}{% endblock %}
 {% block subtitle %}Event Details{% endblock %}
