--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,4 +1,5 @@
 {% extends "base_content.html" %}
+{% load url from future %}
 
 {% block title %}Change Password{% endblock %}
 
@@ -8,7 +9,7 @@
     {% include "form.html" %}
     <div class="form-actions">
       <input type="submit" class="btn btn-primary" value="Change Password" />
-      <a href="/accounts/profile/" class="btn">Cancel</a>
+      <a href="{% url 'accounts_profile' %}" class="btn">Cancel</a>
     </div>
   </form>
 {% endblock %}
