--- a/templates/member/detail.html
+++ b/templates/member/detail.html
@@ -1,4 +1,5 @@
 {% extends "member/member.html" %}
+{% load url from future %}
 
 {% block title %}{{ member.name }}{% endblock %}
 {% block subtitle %}Member Details{% endblock %}
