Added MemberCreateView and corresponding template/link

--- a/templates/member/list.html
+++ b/templates/member/list.html
@@ -26,4 +26,5 @@
       {% endfor %}
     </tbody>
   </table>
+  <a href="{% url 'member_create' %}" class="btn btn-primary">Create Member</a>
 {% endblock %}
