--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,4 +1,7 @@
 {% load url from future %}
-A password reset request has been received for user {{ user }}. Follow the link below to reset your password:
-{{ protocol}}://{{ site_name }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}
+A password reset request has been received for user {{ user }}. 
+
+Follow the link below to reset your password:
+{{ protocol }}://{{ site_name }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}
+
 If you did not initiate the request, kindly ignore this mail. 
