Removed email field from Member model, using email field in User instead

--- a/templates/member/detail.html
+++ b/templates/member/detail.html
@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Email</th>
-      <td>{{ member.email }}</td>
+      <td>{{ member.user.email }}</td>
     </tr>
   </table>
 {% endblock %}
