--- a/templates/member/list.html
+++ b/templates/member/list.html
@@ -21,7 +21,7 @@
           <td>{{ member.class_name }}</td>
           <td>{{ member.home_phone }}</td>
           <td>{{ member.mobile_phone }}</td>
-          <td>{{ member.email }}</td>
+          <td>{{ member.user.email }}</td>
         </tr>
       {% endfor %}
     </tbody>
