Added EventCreateView and corresponding template/link

--- a/templates/event/list.html
+++ b/templates/event/list.html
@@ -30,4 +30,5 @@
       {% endfor %}
     </tbody>
   </table>
+  {% if user.is_staff %}<a href="{% url 'event_create' %}" class="btn btn-primary">Create Event</a>{% endif %}
 {% endblock %}
