--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
       }
     </style>
     <link href="http://static.openduty.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="http://static.openduty.com/jquery-ui/css/smoothness/jquery-ui-1.8.19.custom.css" rel="stylesheet">
+    <link href="http://static.openduty.com/jquery-ui-timepicker/jquery.ui.timepicker.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -86,6 +88,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://static.openduty.com/js/jquery.js"></script>
     <script src="http://static.openduty.com/bootstrap/js/bootstrap.js"></script>
+    <script src="http://static.openduty.com/jquery-ui/js/jquery-ui-1.8.19.custom.min.js"></script>
+    <script src="http://static.openduty.com/jquery-ui-timepicker/jquery.ui.timepicker.js"></script>
 
+    {% block javascript %}{% endblock %}
   </body>
 </html>
