Added Assignment information to EventDetailView

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
       .sidebar-nav {
         padding: 9px 0;
       }
+      .new-section {
+        padding-top: 40px;
+      }
       .table-left th {
         width: 20%;
       }
