--- a/templates/event/detail.html
+++ b/templates/event/detail.html
@@ -74,4 +74,7 @@
       {% endfor %}
     </tbody>
   </table>
+  {% if user.is_staff %}
+    <a href="{% url 'assignment_create' event.id %}" class="btn btn-primary">Create Assignment</a>
+  {% endif %}
 {% endblock %}
