--- a/templates/member/delete.html
+++ b/templates/member/delete.html
@@ -11,7 +11,7 @@
     <h4>Do you really want to delete {{ member.name }}?</h4>
     <div class="form-actions">
       <input type="submit" class="btn btn-danger" value="Delete Member" />
-      <a href="{% url 'member_detail' member.id %}" class="btn">Cancel</a>
+      <a href="{{ member.get_absolute_url }}" class="btn">Cancel</a>
     </div>
   </form>
 {% endblock %}
