--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,14 @@
                 <li{% block dashboard_active %}{% endblock %}><a href="/dashboard/">Dashboard</a></li>
                 <li{% block member_active %}{% endblock %}><a href="{% url 'member' %}">Members</a></li>
                 <li{% block event_active %}{% endblock %}><a href="{% url 'event' %}">Events</a></li>
+                {% if user.is_staff %}
+                  <li class="dropdown"{% block admin_active %}{% endblock %}>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="{% url 'assignment_signup_queue' %}">Sign Up Queue</a></li>
+                    </ul>
+                  </li>
+                {% endif %}
               </ul>
               <ul class="nav pull-right">
                 <li class="divider-vertical"></li>
