--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,21 @@
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="http://static.openduty.com/img/icon.png">
     <link rel="apple-touch-icon-precomposed" href="http://static.openduty.com/img/icon.png">
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-31402724-1']);
+  _gaq.push(['_setDomainName', 'openduty.com']);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </head>
 
   <body>
