--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,11 @@
     <link href="http://static.openduty.com/jquery-ui/css/smoothness/jquery-ui-1.8.19.custom.css" rel="stylesheet">
     <link href="http://static.openduty.com/jquery-ui-timepicker/jquery.ui.timepicker.css" rel="stylesheet">
 
+    {% load facebook %}
+    {% facebook_init %}
+      {% block facebook_code %}{% endblock %}
+    {% endfacebook %}
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -118,5 +123,7 @@
     <script src="http://static.openduty.com/jquery-ui-timepicker/jquery.ui.timepicker.js"></script>
 
     {% block javascript %}{% endblock %}
+    
+    {% facebook_load %}
   </body>
 </html>
