--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,6 +14,12 @@
       </div>
     {% endif %}
     {% include "form.html" %}
+    <div class="control-group">
+      <div class="control-label"></div>
+      <div class="controls">
+        <fb:login-button on-login="document.location = '{% url 'facebook' %}';">Login with Facebook</fb:login-button>
+      </div>
+    </div>
     <div class="form-actions">
       <input type="submit" class="btn btn-primary" value="Login" />
       <a href="{% url 'django.contrib.auth.views.password_reset' %}" class="btn">Forgot password?</a>
