--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="http://static.openduty.com/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="https://static.openduty.com/bootstrap/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 20px;
@@ -30,9 +30,9 @@
         width: 20%;
       }
     </style>
-    <link href="http://static.openduty.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="http://static.openduty.com/jquery-ui/css/smoothness/jquery-ui-1.8.19.custom.css" rel="stylesheet">
-    <link href="http://static.openduty.com/jquery-ui-timepicker/jquery.ui.timepicker.css" rel="stylesheet">
+    <link href="https://static.openduty.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="https://static.openduty.com/jquery-ui/css/smoothness/jquery-ui-1.8.19.custom.css" rel="stylesheet">
+    <link href="https://static.openduty.com/jquery-ui-timepicker/jquery.ui.timepicker.css" rel="stylesheet">
 
     {% load facebook %}
     {% facebook_init %}
@@ -41,12 +41,12 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="http://static.openduty.com/img/icon.png">
-    <link rel="apple-touch-icon-precomposed" href="http://static.openduty.com/img/icon.png">
+    <link rel="shortcut icon" href="https://static.openduty.com/img/icon.png">
+    <link rel="apple-touch-icon-precomposed" href="https://static.openduty.com/img/icon.png">
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -117,10 +117,10 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://static.openduty.com/js/jquery.js"></script>
-    <script src="http://static.openduty.com/bootstrap/js/bootstrap.js"></script>
-    <script src="http://static.openduty.com/jquery-ui/js/jquery-ui-1.8.19.custom.min.js"></script>
-    <script src="http://static.openduty.com/jquery-ui-timepicker/jquery.ui.timepicker.js"></script>
+    <script src="https://static.openduty.com/js/jquery.js"></script>
+    <script src="https://static.openduty.com/bootstrap/js/bootstrap.js"></script>
+    <script src="https://static.openduty.com/jquery-ui/js/jquery-ui-1.8.19.custom.min.js"></script>
+    <script src="https://static.openduty.com/jquery-ui-timepicker/jquery.ui.timepicker.js"></script>
 
     {% block javascript %}{% endblock %}
     
