--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,14 +14,9 @@
       </div>
     {% endif %}
     {% include "form.html" %}
-    <div class="control-group">
-      <div class="control-label"></div>
-      <div class="controls">
-        <fb:login-button size="icon" on-login="document.location = '{% url 'facebook' %}';"></fb:login-button>
-      </div>
-    </div>
     <div class="form-actions">
       <input type="submit" class="btn btn-primary" value="Login" />
+      <a href="#" onclick="FB.login();" class="btn">Login with Facebook</a>
       <a href="{% url 'django.contrib.auth.views.password_reset' %}" class="btn">Forgot password?</a>
     </div>
     <input type="hidden" name="next" value="{{ next }}" />
